--- a/SecuEHR-master/frontend/index.html
+++ b/SecuEHR-master/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SecuEHR </title>
+    <title>Medi-Track </title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
     
   </head>
